<resources>
    <string name="app_name">Ruleta Rusa</string>
    <string name="ruleta_rusa">RULETA RUSA</string>
    <string name="todo">TODO</string>
    <string name="as">TODO</string>
    <string name="eae">Salir</string>
    <string name="eeqe">Volver a jugar</string>
    <string name="shoot">SHOOT</string>
    <string name="pp">TODO</string>
    <string name="rr">TODO</string>
    <string name="eee">TODO</string>
    <string name="kk">TODO</string>
    <string name="rrr">TODO</string>
</resources>