<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".End">

    <Button
        android:id="@+id/play"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:backgroundTint="#000000"
        android:text="@string/eeqe"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/exit"
        android:layout_width="106dp"
        android:layout_height="66dp"
        android:backgroundTint="#000000"
        android:text="@string/eae"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/play"
        app:layout_constraintVertical_bias="0.161" />

    <ImageView
        android:id="@+id/russiaWP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/as"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/russia"
        android:scaleType="fitXY"/>
</androidx.constraintlayout.widget.ConstraintLayout>